Bug 237670 - Dialog boxes do not trigger corresponding sounds
Summary: Dialog boxes do not trigger corresponding sounds
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knotify (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Olivier Goffart
URL:
Keywords:
: 232302 240805 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-14 21:54 UTC by Nikita Churaev
Modified: 2010-06-25 20:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Churaev 2010-05-14 21:54:18 UTC
Version:            (using KDE 4.4.3)
OS:                Linux
Installed from:    Archlinux Packages

Dialog boxes do not trigger corresponding sounds. I do not hear "Question", "Warning", "Critical Message", "Catastrophe" sounds when dialog boxes are shown.

Steps to reproduce:
 1. Go to "Notifications" in system settings and ensure that "Warning" sound is on
 2. Change some sound but DO NOT click "Apply"
 3. Switch to another tab
 4. The warning dialog is shown, but "Warning" sound is not played

Another one:
 1. Open KWrite
 2. Write some text but do not save it
 3. Press close button
 4. The warning dialog is shown, but "Warning" sound is not played
Comment 1 Troy Unrau 2010-05-14 22:36:32 UTC
I can confirm this - many of the notification sounds across KDE are simply not playing. (KDE 4.4.3)
Comment 2 Christoph Feck 2010-06-07 12:50:17 UTC
*** Bug 240805 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2010-06-13 21:00:47 UTC
*** Bug 232302 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-06-25 20:41:25 UTC
SVN commit 1142814 by cfeck:

Trigger KDE default events for message boxes

If people complain, the default settings can be changed,
but not being able to enable sounds at all is a bug.

BUG: 237670
FIXED-IN: 4.5.0


 M  +2 -1      kmessagebox.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1142814