Trigger KDE default events for message boxes

If people complain, the default settings can be changed,
but not being able to enable sounds at all is a bug.

BUG: 237670
FIXED-IN: 4.5.0

svn path=/trunk/KDE/kdelibs/; revision=1142814